# Reinforcement_Learning_version_000

./: .gitignore  COMO_USAR.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
business_rl/: README.md  __init__.py  init.py  setup.py
business_rl/algorithms/: __init__.py  registry.py
business_rl/algorithms/stable/: __init__.py  ppo.py  ppo_simple.py  sac.py
business_rl/core/: __init__.py  agent.py  memory.py  problem.py  trainer.py
business_rl/domains/: __init__.py
business_rl/domains/marketing/: __init__.py  campanha_ads.py
business_rl/domains/real_estate/: __init__.py  compra_terreno.py
business_rl/examples/: __init__.py  train_terreno.py  train_with_dashboard.py
business_rl/optimization/: __init__.py  constraints.py  risk.py  trust_region.py
business_rl/tools/: __init__.py  dashboard.py  dsl.py
business_rl/tools/templates/: dashboard.html
examples/advanced/: 01_portfolio_management.py  02_dynamic_pricing.py  03_inventory_management.py  04_contextual_bandits_personalization.py  05_multi_agent_cooperation.py  05_multi_agent_supply_chain.py  06_hierarchical_restaurant.py  06_hierarchical_trading_system.py  07_ensemble_model_selection.py  07_ensemble_pricing.py  08_viabilidade_incorporacao.py  README.md
examples/basic/: 01_precificacao_imoveis.py  02_compra_materiais.py
