[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "business-rl"
version = "0.1.0"
description = "Framework customizado de RL para construir modelos ultra complexos de forma intuitiva"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Business-RL Team"}
]
keywords = ["reinforcement-learning", "machine-learning", "business", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=1.10.0",
    "numpy>=1.19.0",
    "gymnasium>=0.26.0",
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "plotly>=5.0.0",
    "pyyaml>=5.4.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.900",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/cbaracho200/Reinforcement_Learning_version_000"
Repository = "https://github.com/cbaracho200/Reinforcement_Learning_version_000"
Documentation = "https://github.com/cbaracho200/Reinforcement_Learning_version_000/blob/main/README.md"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
"business_rl.tools" = ["templates/*.html"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
